welcome.lessons.welcome.bat.bool2.AnswerCell.scala.error
answerCell:4: error: not found: value is
  } else if (isMorning && is Mom){
                          ^